@@ -78,3 +78,8 @@
     Finished "A unit asks to move to another contiguous cell" scenario. In order to make the code more legible and not to have all the 
         behaviours inside setup() method, I have moved both behaviours(createUnit and moveToCell) inside two new methods 
         (startCreateUnitBehaviour and startMoveToCellBehaviour).
+----------------------------------------------------------------------------------------------------------------
+ (6) {05-04-2019 12:00} Removed service registering : 
+ 1. [FIX]
+    Removed AgTribe and AgUnit service self-registering. Initially this was blindly implemented in all agents. But
+      out agents must not be publicly announced.
